ecmascript/parser/tests/test262-error-references/fail/235adc0d4af204c6.js.stderr
error: Unexpected token `.`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/235adc0d4af204c6.js:1:7
  |
1 | var [a.b] = 0
  |       ^

